# fastdds-visualizer-plugin

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  fastdds_visualizer_plugin.repos  package.xml  plotjuggler-3.9.1.patch  plotjuggler_fastdds.repos
.dev/: wip.md
.dev/design/: backend.plantuml  datastream.plantuml  parallel_herarchy.hpp  parallel_herarchy.plantuml  view_controller.plantuml
.dev/sequences/: dataReception.plantuml  onStart.plantuml
.github/workflows/: requirements.repos  reusable-workflow.yml  test.yml
docs/: CMakeLists.txt  conf.py  index.rst  requirements.txt  titlepage.rst
docs/cmake/modules/: FindSphinx.cmake
docs/rst/: spelling_wordlist.txt
docs/rst/dds_suite/: dds_suite.rst  suite_demo.rst
docs/rst/developer_manual/installation/configuration/: cmake_options.rst
docs/rst/developer_manual/installation/sources/: linux.rst
docs/rst/docker/docker_demo/: fast_dds_suite.rst
docs/rst/exports/: alias.include
docs/rst/formalia/: titlepage.rst
docs/rst/getting_started/: tutorial.rst
docs/rst/installation/: docker.rst  linux.rst  windows.rst
docs/rst/notes/: forthcoming_version.rst  notes.rst
docs/rst/notes/previous_versions/: v1.0.0.rst  v2.0.0.rst  v2.1.0.rst  v2.2.0.rst
docs/rst/user_manual/: configuration.rst  dynamic_data_types.rst  start_plugin.rst  tutorials.rst
docs/test/: CMakeLists.txt
plugins/datastreamer_plugin/: CMakeLists.txt
plugins/datastreamer_plugin/datastreamer/: FastDdsDataStreamer.cpp  FastDdsDataStreamer.hpp
plugins/datastreamer_plugin/fastdds/: FastDdsListener.hpp  Handler.cpp  Handler.hpp  Listener.hpp  Participant.cpp  Participant.hpp  ReaderHandler.cpp  ReaderHandler.hpp  TopicDataBase.hpp
plugins/datastreamer_plugin/ui/domain_selection_dialog/: dialogselectdomain.cpp  dialogselectdomain.h  dialogselectdomain.ui
plugins/datastreamer_plugin/ui/topic_selection_dialog/: Configuration.cpp  Configuration.hpp  UiListener.hpp  dialogselecttopics.cpp  dialogselecttopics.h  dialogselecttopics.ui
plugins/datastreamer_plugin/utils/: DataTypeConfiguration.hpp  Exception.hpp  dynamic_types_utils.cpp  dynamic_types_utils.hpp  types.hpp  utils.cpp  utils.hpp
resources/datatypes_xml/: HelloWorldDataType.xml  RosKeylessShapesDemoDataType.xml
