<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>plotjuggler_fastdds</name>
    <version>0.0.0</version>
    <description>PlotJuggler plugin for Fast DDS</description>

    <maintainer email="support@eProsima.comm">eProsima Support</maintainer>
    <maintainer email="javierparis@eprosima.com">Javier Paris</maintainer>

    <license file="LICENSE">Apache 2.0</license>

    <url type="website">https://www.eprosima.com/</url>
    <url type="bugtracker">https://github.com/eProsima/plotjuggler-fastdds-plugins/issues</url>
    <url type="repository">https://github.com/eProsima/plotjuggler-fastdds-plugins</url>

    <author email="javierparis@eprosima.com">Javier Paris</author>

    <buildtool_depend>cmake</buildtool_depend>

    <!-- Fast DDS dependencies -->
    <depend>fastcdr</depend>
    <depend>fastrtps</depend>

    <!-- Plotjuggler -->
    <depend>plotjuggler</depend>

    <!-- common dependancies -->
    <depend>qtbase5-dev</depend>
    <depend>binutils</depend>
    <depend>libqt5-svg-dev</depend>
    <depend>libqt5-websockets-dev</depend>
    <depend>boost</depend>

    <export>
        <build_type>cmake</build_type>
    </export>

</package>
