<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>fastdds_visualizer_plugin</name>
    <version>1.0.0</version>
    <description>Fast DDS Visualizer Plugin for PlotJuggler</description>

    <maintainer email="support@eProsima.comm">eProsima Support</maintainer>
    <maintainer email="javierparis@eprosima.com">Javier Paris</maintainer>

    <license file="LICENSE">GPLv3</license>

    <url type="website">https://www.eprosima.com/</url>
    <url type="bugtracker">https://github.com/eProsima/fastdds-visualizer-plugin/issues</url>
    <url type="repository">https://github.com/eProsima/fastdds-visualizer-plugin</url>

    <author email="javierparis@eprosima.com">Javier Paris</author>

    <buildtool_depend>cmake</buildtool_depend>

    <!-- Fast DDS dependencies -->
    <depend>fastcdr</depend>
    <depend>fastdds</depend>

    <!-- Plotjuggler -->
    <depend>plotjuggler</depend>

    <!-- common dependancies -->
    <depend>qtbase5-dev</depend>
    <depend>binutils</depend>
    <depend>libqt5-svg-dev</depend>
    <depend>libqt5-websockets-dev</depend>
    <depend>boost</depend>

    <export>
        <build_type>cmake</build_type>
    </export>

</package>
